feat: disable auto_fold_dirs

--- a/settings.json
+++ b/settings.json
@@ -24,6 +24,7 @@
   },
 
   "project_panel": {
+    "auto_fold_dirs": false,
     "dock": "right",
     "indent_size": 14,
     "entry_spacing": "standard",
